<resources>
    <string name="app_name">LocalDB</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="reg">Register</string>
    <string name="show">Show_Data</string>
    <string name="pw">Password</string>
    <string name="un">Username</string>
    <string name="update">Update</string>
    <string name="info">Get_info</string>
    <string name="del">Delete</string>
    <string name="wel">Welcome</string>
    <string name="title_activity_userlist">Userlist</string>
    <string name="lst">List</string>
</resources>
